--- a/vignettes/blueprint-july.Rmd
+++ b/vignettes/blueprint-july.Rmd
@@ -135,8 +135,7 @@ $$
 C_{ss} =  \frac{I\pi}{\alpha \nu}
 $$
 
-We note here also that for the purposes of the analyses presented here, we calculate the volume of the space as follows:
-$$
+We note here also that for the purposes of the analyses presented here, we calculate the volume of the space as follows: $$
 \nu = N D_mH
 $$
 
@@ -169,21 +168,21 @@ Write something that because of our parameterisation using infection prevalence,
 
 As we can see, the ratio is
 
-| Parameter       | Value Used                      | Description                                                                                                                                                                         | Source                                                                                                                                                                                                                                                                                                                                                                                                                               |
-|---------|-----------|--------------------------------|-------------------|
-| $\pi$           | 27 viruses per person per hour  | Rates of (infective) virus emission from infected individuals.                                                                                                                      | [Blatchley et al, 2024](https://pubs.acs.org/doi/full/10.1021/acs.est.3c03026#) & [Buonanno et al, 2020](https://www.sciencedirect.com/science/article/pii/S0160412020320675#f0020)                                                                                                                                                                                                                                                  |
-| $A_{school}$    | 0.1-2.9 air changes per hour    | Range of air-changes per hour considered for schools.                                                                                                                               | [Corsi et al, 2006](https://corsiaq.com/reports-etc/) - Section 3.1                                                                                                                                                                                                                                                                                                                                                                  |
-| $D_{school}$    | 30 per 100m\^2                  | Assumed density of individuals in schools                                                                                                                                           | ANSI/ASHRAE Standard 62.1-2022 Table 6.1                                                                                                                                                                                                                                                                                                                                                                                             |
-| $A_{workplace}$ | 0.22-4.84 air changes per hour  | Range of air-changes per hour considered for workplaces.                                                                                                                            | [Corsi et al, 2006](https://corsiaq.com/reports-etc/) - Section 3.1                                                                                                                                                                                                                                                                                                                                                                  |
-| $D_{workplace}$ | 10 per 100m\^2                  | Assumed density of individuals in workplaces                                                                                                                                        | ANSI/ASHRAE Standard 62.1-2022 Table 6.1                                                                                                                                                                                                                                                                                                                                                                                             |
-| $A_{household}$ | 0.21-1.48 air changes per hour  | Range of air-changes per hour considered for households.                                                                                                                            | [Corsi et al, 2006](https://corsiaq.com/reports-etc/) - Section 3.1                                                                                                                                                                                                                                                                                                                                                                  |
-| $D_{household}$ | 5 per 100m\^2                   | Density of individuals in households                                                                                                                                                | Assumed                                                                                                                                                                                                                                                                                                                                                                                                                              |
-| $A_{leisure}$   | 0.22-4.84 air changes per hour  | Range of air-changes per hour considered for leisure settings.                                                                                                                      | Assumed to be the same as workplaces.                                                                                                                                                                                                                                                                                                                                                                                                |
-| $D_{leisure}$   | 50 per 100m\^2                  | Density of individuals in leisure settings                                                                                                                                          | ANSI/ASHRAE Standard 62.1-2022 Table 6.1                                                                                                                                                                                                                                                                                                                                                                                             |
-| $k_D$           | 0.64                            | Natural decay constant for SARS-CoV-2 in aerosols                                                                                                                                   | [Blatchley et al, 2024](https://pubs.acs.org/doi/full/10.1021/acs.est.3c03026#) & [van Doremalen et al, 2020](https://www.nejm.org/doi/full/10.1056/NEJMc2004973)                                                                                                                                                                                                                                                                    |
-| $H$             | 2.5m                            | Height of the space                                                                                                                                                                 | Assumed                                                                                                                                                                                                                                                                                                                                                                                                                              |
-| $B$             | 0.45 m\^3 per hour              | Volume breathing rate i.e. the volume of air breathed in and out per hour. Assumes 15 breaths per minute and 500ml tidal volume to produce 0.45m\^3 volume breathing rate per hour. | [the internet - <https://www.verywellhealth.com/tidal-volume-5090250#>[:\~:text=What%20Is%20Tidal%20Volume%3F&text=Tidal%20volume%20(Vt%20or%20TV,mL%20for%20those%20assigned%20female](https://www.verywellhealth.com/tidal-volume-5090250#:~:text=What%20Is%20Tidal%20Volume%3F&text=Tidal%20volume%20(Vt%20or%20TV,mL%20for%20those%20assigned%20female). and <https://my.clevelandclinic.org/health/articles/10881-vital-signs>] |
-| $r$             | $1.37 × 10^{-2}$                | The probability that a single inhaled infective virus will initiate an infection.                                                                                                   | [Blatchley et al, 2024](https://pubs.acs.org/doi/full/10.1021/acs.est.3c03026#) & [Killingley et al, 2022](https://www.nature.com/articles/s41591-022-01780-9)                                                                                                                                                                                                                                                                       |
+| Parameter       | Value Used                     | Description                                                                                                                                                                         | Source                                                                                                                                                                                                                                                                                                                                                                                                                                  |
+|-----------------|--------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| $\pi$           | 27 viruses per person per hour | Rates of (infective) virus emission from infected individuals.                                                                                                                      | [Blatchley et al, 2024](https://pubs.acs.org/doi/full/10.1021/acs.est.3c03026#) & [Buonanno et al, 2020](https://www.sciencedirect.com/science/article/pii/S0160412020320675#f0020)                                                                                                                                                                                                                                                     |
+| $A_{school}$    | 0.1-2.9 air changes per hour   | Range of air-changes per hour considered for schools.                                                                                                                               | [Corsi et al, 2006](https://corsiaq.com/reports-etc/) - Section 3.1                                                                                                                                                                                                                                                                                                                                                                     |
+| $D_{school}$    | 30 per 100m\^2                 | Assumed density of individuals in schools                                                                                                                                           | ANSI/ASHRAE Standard 62.1-2022 Table 6.1                                                                                                                                                                                                                                                                                                                                                                                                |
+| $A_{workplace}$ | 0.22-4.84 air changes per hour | Range of air-changes per hour considered for workplaces.                                                                                                                            | [Corsi et al, 2006](https://corsiaq.com/reports-etc/) - Section 3.1                                                                                                                                                                                                                                                                                                                                                                     |
+| $D_{workplace}$ | 10 per 100m\^2                 | Assumed density of individuals in workplaces                                                                                                                                        | ANSI/ASHRAE Standard 62.1-2022 Table 6.1                                                                                                                                                                                                                                                                                                                                                                                                |
+| $A_{household}$ | 0.21-1.48 air changes per hour | Range of air-changes per hour considered for households.                                                                                                                            | [Corsi et al, 2006](https://corsiaq.com/reports-etc/) - Section 3.1                                                                                                                                                                                                                                                                                                                                                                     |
+| $D_{household}$ | 5 per 100m\^2                  | Density of individuals in households                                                                                                                                                | Assumed                                                                                                                                                                                                                                                                                                                                                                                                                                 |
+| $A_{leisure}$   | 0.22-4.84 air changes per hour | Range of air-changes per hour considered for leisure settings.                                                                                                                      | Assumed to be the same as workplaces.                                                                                                                                                                                                                                                                                                                                                                                                   |
+| $D_{leisure}$   | 50 per 100m\^2                 | Density of individuals in leisure settings                                                                                                                                          | ANSI/ASHRAE Standard 62.1-2022 Table 6.1                                                                                                                                                                                                                                                                                                                                                                                                |
+| $k_D$           | 0.64                           | Natural decay constant for SARS-CoV-2 in aerosols                                                                                                                                   | [Blatchley et al, 2024](https://pubs.acs.org/doi/full/10.1021/acs.est.3c03026#) & [van Doremalen et al, 2020](https://www.nejm.org/doi/full/10.1056/NEJMc2004973)                                                                                                                                                                                                                                                                       |
+| $H$             | 2.5m                           | Height of the space                                                                                                                                                                 | Assumed                                                                                                                                                                                                                                                                                                                                                                                                                                 |
+| $B$             | 0.45 m\^3 per hour             | Volume breathing rate i.e. the volume of air breathed in and out per hour. Assumes 15 breaths per minute and 500ml tidal volume to produce 0.45m\^3 volume breathing rate per hour. | [the internet - <https://www.verywellhealth.com/tidal-volume-5090250#>[:\~:text=What%20Is%20Tidal%20Volume%3F&text=Tidal%20volume%20(Vt%20or%20TV,mL%20for%20those%20assigned%20female](<https://www.verywellhealth.com/tidal-volume-5090250#>:\~:text=What%20Is%20Tidal%20Volume%3F&text=Tidal%20volume%20(Vt%20or%20TV,mL%20for%20those%20assigned%20female). and <https://my.clevelandclinic.org/health/articles/10881-vital-signs>] |
+| $r$             | $1.37 × 10^{-2}$               | The probability that a single inhaled infective virus will initiate an infection.                                                                                                   | [Blatchley et al, 2024](https://pubs.acs.org/doi/full/10.1021/acs.est.3c03026#) & [Killingley et al, 2022](https://www.nature.com/articles/s41591-022-01780-9)                                                                                                                                                                                                                                                                          |
 
 : Table 1: Parameter Estimates Used to Calculate Variation in Riskiness Across Locations Belonging to the Same Setting Type
 
