--- a/vignettes/blueprint-july.Rmd
+++ b/vignettes/blueprint-july.Rmd
@@ -142,9 +142,7 @@ $$
 
 For the purposes of the analyses presented here, we assume the volume of the space is the following: $$
 \nu = N D_mH
-$$
-
-where $N$ is the number of people occupying the space, $D_m$ is the density of people in the space (i.e. the number of people per m\^2) and $H$ is the height of the space.
+$$ where $N$ is the number of people occupying the space, $D_m$ is the density of people in the space (i.e. the number of people per m\^2) and $H$ is the height of the space.
 
 We then integrate this estimate of the concentration of infective virus in the room with the Wells-Riley equation, a simple and widely used model for the airbone transmission of infectious diseases.
 The Wells-Riley equation takes the following form:
@@ -163,6 +161,39 @@ We used the above equations in tandem with estimates of variation in the ventila
 1.  Infection Prevalence (i.e. the number of infectious individuals in the space).
 2.  Air Changes Per Hour (considering the minimum and maximum of the ranges provided in Table \@ref(tab:1))
 3.  The Time Spent in the Space (ranging from 0 to 8 hours).
+
+```{r wells-riley-1, fig.cap="(ref:wells-riley-1)"}
+
+overall_df <- readRDS(paste0(here::here(), "/inst/blueprint_july_wells_riley_infection_risk_variation.rds"))
+a <- ggplot(subset(overall_df, infection_prevalence == "1% Prev."),
+       aes(x = as.numeric(time), y = prob_inf, col = factor(ACPH))) +
+  geom_line() +
+  geom_point() +
+  facet_grid(. ~ setting_type, scales = "free_y") +
+  theme_bw() +
+  labs(x = "Time (Hours)", y = "Prob. Infected (Wells Riley)",
+       col = "Air Changes\nPer Hour",
+       title = "Infection Risk Over Time for Each Setting Type Across ACPH Range")
+
+overall_df2 <- overall_df %>%
+  filter(time != 0) %>%
+  group_by(time, infection_prevalence, setting_type) %>%
+  summarise(ratio = prob_inf[airchanges_per_hour == min(airchanges_per_hour)]/
+                    prob_inf[airchanges_per_hour == max(airchanges_per_hour)])
+
+b <- ggplot(overall_df2, aes(x = as.numeric(time), y = ratio, col = setting_type)) +
+  geom_line() +
+  geom_point() +
+  facet_grid(. ~ infection_prevalence) +
+  lims(y = c(0, 10)) +
+  theme_bw() +
+  labs(x = "Time (Hours)", y = "Prob. Infected (Wells Riley)",
+       col = "Air Changes\nPer Hour",
+       title = "Ratio of Infection Risk in Most vs Least Ventilated Locations\nof Each Setting Type")
+
+c <- cowplot::plot_grid(a, b, nrow = 2, labels = c("A", "B"))
+c
+```
 
 Code and analyses to go here
 
