--- a/vignettes/blueprint-july.Rmd
+++ b/vignettes/blueprint-july.Rmd
@@ -67,11 +67,11 @@ Can basically copy the structure of the first report.
 ## Location-Specific Variability in "Riskiness" {#location}
 
 Previously, we modelled differences in "riskiness" (i.e. how receptive to onwards transmission it is) between different Setting Types (schools, workplaces, leisure settings and households).
-However, we made the simplifying assumption that all Locations with a particular Setting Type (e.g. individual schools) had the same "riskiness".
-We have updated this and now explicitly incorporate variation in "riskiness" between Locations belonging to the same Setting Type.
+However, we made the simplifying assumption that all Locations with a particular Setting Type (e.g. individual schools) had the same riskiness.
+We have updated this and now explicitly incorporate variation in riskiness between Locations belonging to the same Setting Type.
 Below is a mathematical description of this addition and the parameterisation used for the results presented in this report.
 
-### Modelling Variation in Transmission "Riskiness" Across Locations Belonging to the Same Setting Type
+### Modelling Variation in Transmission Riskiness Across Locations Belonging to the Same Setting Type
 
 As a reminder, the previous version of the force of infection experienced by individual $i$ in Location $m$ at time $t$ was calculated as follows:
 
@@ -104,7 +104,7 @@ For example, $\gamma = 1$ is a setting which is as "risky" as the average locati
 $\gamma = 2$ would describe a setting that is twice as risky; $\gamma = 0.5$ would describe a setting that is half as risky etc.
 Parameterisation and estimation of this parameter $\gamma$ is described further below.
 
-### Parameterising $\gamma$ - Estimating Empirical Variation in Transmission "Riskiness" Across Locations Belonging to the Same Setting Type
+### Parameterising $\gamma$ - Estimating Empirical Variation in Transmission Riskiness Across Locations Belonging to the Same Setting Type
 
 To generate estimates of $\gamma$, we integrated a mathematical model of indoor air quality (as applied to infective virus concentrations) with a well-studied airborne infectious risk model (the Wells-Riley equation).
 We then parameterised these models with literature-derived estimates of:
@@ -158,7 +158,7 @@ $$
 
 where $P_i$ is the probability a person becomes infected conditional on them spending time $t$ in a room with $C_{ss}$ concentration of infective virus, $B$ is the volume rate at which air is breathed in, and $r$ is the risk parameter, the probability that a single inhaled infective virus will initiate an infection.
 
-#### Estimating Variation in "Riskiness" Across Locations of the Same Setting Type
+#### Estimating Variation in Riskiness Across Locations of the Same Setting Type
 
 With the modelling framework to assess risk in place, we carried out a sensitivity analysis to derive reasonable bounds for $\gamma$.
 We used the above equations in tandem with estimates of variation in the ventilation rates in different spaces and parameter estimates for SARS-CoV-2 from Blatchley et al (see Table \@ref(tab:1)) to explore how Location riskiness varied whilst varying:
@@ -167,7 +167,7 @@ We used the above equations in tandem with estimates of variation in the ventila
 2.  Air Changes Per Hour (considering the minimum and maximum of the ranges provided in Table \@ref(tab:1))
 3.  The Time Spent in the Space (ranging from 0 to 8 hours).
 
-Our results show that the ratio of "riskiness" for the most and least risky locations for each Setting Type are invariant across different infection prevalences and assumptions about the time spent in the space.
+Our results show that the ratio of riskiness for the most and least risky locations for each Setting Type are invariant across different infection prevalences and assumptions about the time spent in the space.
 We use these ratios as the basis for the Setting Type and Location specific $\gamma_{j,m}$ values used in the modelling analyses presented in the next section.
 
 ```{r wells-riley-1, fig.cap="(ref:wells-riley-1)"}
