--- a/vignettes/REFERENCES.bib
+++ b/vignettes/REFERENCES.bib
@@ -26,3 +26,21 @@
   year = {2023},
   note = {Retrieved from \url{https://explore-education-statistics.service.gov.uk/find-statistics/school-pupils-and-their-characteristics#contact-us}},
 }
+
+@article{wheaton2014us,
+  title={US Synthetic Population 2010 Version 1.0 Quick Start Guide},
+  author={Wheaton, WD and RTI, Int},
+  journal={RTI International},
+  year={2014}
+}
+
+@book{deBrey2023Digest,
+  title     = {Digest of Education Statistics, 2021},
+  author    = {Cristobal de Brey and Anlan Zhang and Sarah Duffy},
+  year      = {2023},
+  publisher = {National Center for Education Statistics (NCES)},
+  note      = {Publication \#: NCES 2023009},
+  url       = {https://nces.ed.gov/programs/digest/d21/},
+  abstract  = {The 57th in a series of publications initiated in 1962, the Digest's purpose is to provide a compilation of statistical information covering the broad field of education from prekindergarten through graduate school. The Digest contains data on a variety of topics, including the number of schools and colleges, teachers, enrollments, and graduates, in addition to educational attainment, finances, and federal funds for education, libraries, and international comparisons.},
+  type      = {Compendium}
+}
